Begin migrating latest code to Java 8.