@@ -268,7 +268,7 @@ public class NgrokClient {
             final Map<String, String> ngrokApiHeaders = Map.of(
                     "Authorization", String.format("Bearer %s", javaNgrokConfig.getApiKey()),
                     "Ngrok-Version", "2");
-            final Response<Map> tunnelResponse = httpClient.get(String.format("https://api.ngrok.com/tunnels/%s", tunnel.getId()), List.of(), ngrokApiHeaders, Map.class);
+            final Response<Map> tunnelResponse = httpClient.get(String.format("https://api.ngrok.com/tunnels/%s", tunnel.getId()), Collections.emptyList(), ngrokApiHeaders, Map.class);
 
             if (!tunnelResponse.getBody().containsKey("labels") || !(tunnelResponse.getBody().get("labels") instanceof Map) || !((Map) tunnelResponse.getBody().get("labels")).containsKey("edge")) {
                 throw new JavaNgrokException(String.format("Tunnel %s does not have 'labels', use a Tunnel configured on Cloud Edge.", tunnel.getId()));
@@ -286,7 +286,7 @@ public class NgrokClient {
                 throw new JavaNgrokException(String.format("Unknown Edge prefix: %s.", edge));
             }
 
-            final Response<Map> edgeResponse = httpClient.get(String.format("https://api.ngrok.com/edges/%s/%s", edgesPrefix, edge), List.of(), ngrokApiHeaders, Map.class);
+            final Response<Map> edgeResponse = httpClient.get(String.format("https://api.ngrok.com/edges/%s/%s", edgesPrefix, edge), Collections.emptyList(), ngrokApiHeaders, Map.class);
 
             if (!edgeResponse.getBody().containsKey("hostports") || !(edgeResponse.getBody().get("hostports") instanceof List) || ((List) edgeResponse.getBody().get("hostports")).isEmpty()) {
                 throw new JavaNgrokException(String.format("No Endpoint is attached to your Cloud Edge %s, login to the ngrok dashboard to attach an Endpoint to your Edge first.", edge));
@@ -450,7 +450,7 @@ public class NgrokClient {
         }
 
         final String name;
-        final Map<String, Object> tunnelDefinitions = (Map<String, Object>) config.getOrDefault("tunnels", Map.of());
+        final Map<String, Object> tunnelDefinitions = (Map<String, Object>) config.getOrDefault("tunnels", Collections.emptyMap());
         if (isNull(createTunnel.getName()) && tunnelDefinitions.containsKey("java-ngrok-default")) {
             name = "java-ngrok-default";
             createTunnelBuilder.withName(name);
